@@ -37,6 +37,29 @@
                                COMMAND_DEBUG_THRESHOLD, __VA_ARGS__ )
 
 
+static int security_bit_state;
+
+static void security_check( dfu_device_t *device )
+{
+    if( ADC_AVR32 == device->type ) {
+        // Get security bit state for AVR32.
+        security_bit_state = atmel_getsecure( device );
+        DEBUG( "Security bit check returned %d.\n", security_bit_state );
+    } else {
+        // Security bit not present or not testable.
+        security_bit_state = ATMEL_SECURE_OFF;
+    }
+}
+
+static void security_message()
+{
+    if( security_bit_state > ATMEL_SECURE_OFF ) {
+        fprintf( stderr, "The security bit %s set.\n"
+                         "Erase the device to clear temporarily.\n",
+                         (ATMEL_SECURE_ON == security_bit_state) ? "is" : "may be" );
+    }
+}
+
 static int32_t execute_erase( dfu_device_t *device,
                               struct programmer_arguments *args )
 {
@@ -365,6 +388,9 @@ static int32_t execute_getfuse( dfu_device_t *device,
     int32_t value = 0;
     int32_t status;
 
+    /* Check AVR32 security bit in order to provide a better error message. */
+    security_check( device );
+
     status = atmel_read_fuses( device, &info );
 
     if( 0 != status ) {
@@ -372,6 +398,7 @@ static int32_t execute_getfuse( dfu_device_t *device,
                args->device_type_string );
         fprintf( stderr, "Error reading %s config information.\n",
                          args->device_type_string );
+        security_message();
         return status;
     }
 
@@ -430,6 +457,9 @@ static int32_t execute_get( dfu_device_t *device,
     int32_t status;
     int32_t controller_error = 0;
 
+    /* Check AVR32 security bit in order to provide a better error message. */
+    security_check( device );
+
     status = atmel_read_config( device, &info );
 
     if( 0 != status ) {
@@ -437,6 +467,7 @@ static int32_t execute_get( dfu_device_t *device,
                args->device_type_string );
         fprintf( stderr, "Error reading %s config information.\n",
                          args->device_type_string );
+        security_message();
         return status;
     }
 
@@ -547,6 +578,9 @@ static int32_t execute_dump_normal( dfu_device_t *device,
         goto error;
     }
 
+    /* Check AVR32 security bit in order to provide a better error message. */
+    security_check( device );
+
     DEBUG( "dump %d bytes\n", memory_size );
 
     if( memory_size != atmel_read_flash(device, args->flash_address_bottom,
@@ -555,6 +589,7 @@ static int32_t execute_dump_normal( dfu_device_t *device,
     {
         fprintf( stderr, "Failed to read %lu bytes from device.\n",
                  (unsigned long) memory_size );
+        security_message();
         return -1;
     }
 
@@ -594,6 +629,9 @@ static int32_t execute_dump_eeprom( dfu_device_t *device,
         goto error;
     }
 
+    /* Check AVR32 security bit in order to provide a better error message. */
+    security_check( device );
+
     DEBUG( "dump %d bytes\n", memory_size );
 
     if( memory_size != atmel_read_flash(device, 0,
@@ -602,6 +640,7 @@ static int32_t execute_dump_eeprom( dfu_device_t *device,
     {
         fprintf( stderr, "Failed to read %lu bytes from device.\n",
                  (unsigned long) memory_size );
+        security_message();
         return -1;
     }
 
@@ -634,6 +673,9 @@ static int32_t execute_dump_user_page( dfu_device_t *device,
         goto error;
     }
 
+    /* Check AVR32 security bit in order to provide a better error message. */
+    security_check( device );
+
     DEBUG( "dump %d bytes\n", page_size );
 
     if( page_size != atmel_read_flash(device, 0,
@@ -642,6 +684,7 @@ static int32_t execute_dump_user_page( dfu_device_t *device,
     {
         fprintf( stderr, "Failed to read %lu bytes from device.\n",
                  (unsigned long) page_size );
+        security_message();
         return -1;
     }
 
@@ -672,10 +715,14 @@ static int32_t execute_setfuse( dfu_device_t *device,
         return -1;
     }
 
+    /* Check AVR32 security bit in order to provide a better error message. */
+    security_check( device );
+
     if( 0 != atmel_set_fuse(device, name, value) )
     {
         DEBUG( "Fuse set failed.\n" );
         fprintf( stderr, "Fuse set failed.\n" );
+        security_message();
         return -1;
     }
 
